# thesis-obc-software

./: CMakeLists.txt
AutoGenerated.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-local-default.mk  configurations.xml
inc/FreeRTOSTasks/: MRAMTask.hpp  NANDTask.hpp  StatisticsReportingTask.hpp
inc/Platform/: LCLDefinitions.hpp  Peripheral_Definitions.hpp
inc/Platform/Parameters/: CommonParameters.hpp
lib/cross-platform-software/: .gitmodules  CMakeLists.txt  README.md
lib/cross-platform-software/inc/FreeRTOSTasks/: AmbientTemperatureTask.hpp  CANGatekeeperTask.hpp  CANTestTask.hpp  UARTGatekeeperTask.hpp  WatchdogTask.hpp
lib/cross-platform-software/inc/Parameters/: AcubeSATParameters.hpp
lib/cross-platform-software/inc/Platform/CAN/: ApplicationLayer.hpp
lib/cross-platform-software/lib/ecss-services/lib/logger/: CMakeLists.txt  README.md
lib/cross-platform-software/lib/ecss-services/lib/logger/inc/: Logger.hpp
lib/cross-platform-software/src/FreeRTOSTasks/: AmbientTemperatureTask.cpp  CANGatekeeperTask.cpp  CANTestTask.cpp  UARTGatekeeperTask.cpp
lib/cross-platform-software/src/Platform/: Logger.cpp  TaskInitialization.cpp
lib/cross-platform-software/src/Platform/CAN/: ApplicationLayer.cpp  Driver.cpp
src/: main.cpp
src/FreeRTOSTasks/: MRAMTask.cpp  NANDTask.cpp  TCHandlingTask.cpp
src/Platform/: EnvironmentalTestingHelper.cpp
src/config/default/: definitions.h  harmony-manifest-failure.yml  initialization.c  interrupts.c  interrupts.h  pin_configurations.csv
src/config/default/default.mhc/: GraphSettings.yml  (+6 more)
(+9 files in other folders)
